[gd_scene load_steps=7 format=3 uid="uid://cxyhtsr231llp"]

[ext_resource type="Script" path="res://Enemies/shield_boy.gd" id="1_6mu7y"]
[ext_resource type="Script" path="res://Enemies/HitBox.gd" id="2_m2m3s"]

[sub_resource type="Gradient" id="Gradient_2vmgw"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0.431373, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_10nvc"]
gradient = SubResource("Gradient_2vmgw")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pletf"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fbd5c"]
size = Vector2(64.5374, 64.2538)

[node name="ShieldBoy" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_6mu7y")
Direction = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_10nvc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_pletf")

[node name="FLoorCheckLeft" type="RayCast2D" parent="."]
position = Vector2(-33, 32)
target_position = Vector2(0, 2)
hit_from_inside = true

[node name="WallCheckLeft" type="RayCast2D" parent="."]
position = Vector2(-33, 25)
target_position = Vector2(-2, 0)
hit_from_inside = true

[node name="FLoorCheckright" type="RayCast2D" parent="."]
position = Vector2(33, 32)
target_position = Vector2(0, 2)
hit_from_inside = true

[node name="wallCheckright" type="RayCast2D" parent="."]
position = Vector2(33, 24)
target_position = Vector2(2, 0)
hit_from_inside = true

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2
script = ExtResource("2_m2m3s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-0.00233936, -0.126884)
shape = SubResource("RectangleShape2D_fbd5c")

[connection signal="body_entered" from="HitBox" to="HitBox" method="_on_body_entered"]
